--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "build": "babel src -d lib",
     "toc": "markdown-toc -i README.md",
     "postversion": "git push && git push --tags",
-    "prepublish": "npm test && npm run build"
+    "prepublish": "npm test && npm run build",
+    "triggerAllTests": "npx cypress open",
+    "triggerAllTests-headless": "npx cypress run",
+    "triggerAllTests-headed": "npx cypress run --headed",
+    "triggerAllTests-chrome-headless": "npx cypress run --browser chrome",
+    "triggerAllTests-chrome-headed": "npx cypress run --browser chrome --headed"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
